--- a/sam.html
+++ b/sam.html
@@ -361,8 +361,8 @@
       <div class="logo">Samuel's Portfolio</div>
       <div>
         <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -377,9 +377,8 @@
           <span></span>
         </div>
         <div class="menu-links">
+          <li><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </div>
       </div>
